tests/NormalTests/paczka1/fuzzy1/51963870.err
Error in line 4: M2Zu A579 99,2
Error in line 19: 2CYWS8xv7 A674 180,48
Error in line 25: ?421
Error in line 27: 1QOCNgs#S421#18,2
Error in line 28: 1QOCNgs S421 70,1
